# Agora

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  KNOWN_ISSUES.md  README.md  pyproject.toml  run_web.py  start.sh
docs/plans/: 2026-04-23-frontend-rebuild.md  2026-04-24-moderator-brainstorm-design.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
report/: 2026-04-24-作为安全工程师需要发送漏洞工单给研发-需要在安全工单中输出哪些内容可以保证清晰易懂.md  2026-04-25-作为安全工程师需要发送漏洞工单给研发-需要在安全工单中输出哪些内容可以保证清晰易懂.md  2026-04-26-作为安全工程师需要发送漏洞工单给研发-需要在安全工单中输出哪.md  2026-04-26-在授权安全测试场景下-如何设计一个用于企业业务逻辑绕过风险发.md  2026-04-26-我想搭建一个能基于企业特色的-业务逻辑绕过检测-agent-已有基础的-skill-但是我想要转化为更加全面的-agent-可以通过不断扩展需要关注的业务类型然.md  2026-04-27-我现在已经有一套-pr-代码-review-的框架-通过-h.md  2026-05-04-mattpocock-skills-analysis.md  业务skill-正式报告.md  业务skill.md
scripts/: baseline_result.json  baseline_test.py  e2e_discussion_ws.py  e2e_test.py  optimized_result.json
sessions/: mobavn8e.json  mocnwlig.json  mocoj2ki.json  mocync6y.json  mod5vo5k.json  modps4lm.json  modwssxh.json  mofptbsc.json  mofrxoc2.json  mofwlc2d.json  moh3a63u.json
src/: __init__.py  blueprint.py  blueprint_export.py  brainstorm.py  cli.py  config_writer.py  discussion.py  loader.py  models.py  openai_sse_proxy.py  pipeline.py  reporting.py  text_safety.py  voting.py  web_entry.py  web_server.py
tests/: test_blueprint.py  test_config_api.py  test_config_safety.py  test_config_writer.py  test_loader.py  test_loader_registry.py  test_pipeline_and_voting.py  test_solution_export.py  test_synthesizer_contract.py  test_synthesizer_degraded.py  test_synthesizer_minimal.py  test_voting_source.py
(+82 files in other folders)
