[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-discussion"
version = "0.1.0"
description = "Multi-agent group discussion and voting CLI tool based on Semantic Kernel"
requires-python = ">=3.10"
dependencies = [
    "semantic-kernel>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
agent-discussion = "src.cli:main"
agent-discussion-web = "src.web_entry:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "websockets>=12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/config" = "src/config"
